[gd_scene load_steps=8 format=3 uid="uid://dvaye2ps5wcac"]

[ext_resource type="Script" path="res://scenes/horizontal_path_to_clancy.gd" id="1_fnyst"]
[ext_resource type="PackedScene" uid="uid://btcpjdktuymx" path="res://scenes/tile_map.tscn" id="1_me115"]
[ext_resource type="PackedScene" uid="uid://bhysbh3p85m13" path="res://scenes/christina.tscn" id="2_ouep1"]
[ext_resource type="PackedScene" uid="uid://8v3obom8if5a" path="res://scenes/rain.tscn" id="3_jrfk8"]
[ext_resource type="PackedScene" uid="uid://vcypnq8pc4sq" path="res://scenes/sunset.tscn" id="4_ogake"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nn48c"]
size = Vector2(20, 149)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ox7g"]
size = Vector2(145, 20)

[node name="horizontal_path_to_clancy" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_fnyst")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="TileMap" parent="." instance=ExtResource("1_me115")]
layer_0/tile_data = PackedInt32Array(2555970, 393248, 0, 2555971, 393248, 0, 2555972, 393248, 0, 2555973, 393248, 0, 2555974, 393248, 0, 2555975, 393248, 0, 2621511, 393248, 1, 2621510, 393248, 1, 2621509, 393248, 1, 2621508, 393248, 1, 2621507, 393248, 1, 2621506, 393248, 1, 2687042, 393248, 2, 2687043, 393248, 2, 2687044, 393248, 2, 2687045, 393248, 2, 2687046, 393248, 2, 2687047, 393248, 2, 2687038, 327712, 2, 2621502, 327712, 1, 2555966, 327712, 1, 2490430, 327712, 1, 2424894, 327712, 1, 2687041, 393248, 2, 2687040, 393248, 2, 2687039, 393248, 2, 2555969, 393248, 0, 2555968, 393248, 3, 2490432, 458784, 1, 2424896, 458784, 1, 2359360, 458784, 1, 2359358, 327712, 1, 2621505, 393248, 1, 2621504, 393248, 1, 2621503, 393248, 1, 2555967, 393248, 1, 2490431, 393248, 1, 2424895, 393248, 1, 2359359, 393248, 1, 2490433, 65568, 6, 2424897, 131104, 1, 2359361, 131104, 1, 2359357, 32, 1, 2424893, 32, 1, 2490429, 32, 1, 2555965, 32, 1, 2621501, 32, 1, 2687037, 32, 1, 2752573, 32, 2, 2752574, 65568, 2, 2752575, 131104, 4, 2752576, 65568, 4, 2752577, 65568, 2, 2752578, 32, 4, 2752579, 131104, 4, 2752580, 65568, 2, 2752581, 131104, 4, 2752582, 65568, 2, 2752583, 32, 4, 2490434, 65568, 0, 2490435, 65568, 3, 2490436, 131104, 3, 2490437, 65568, 0, 2490438, 32, 3, 2490439, 65568, 3)
layer_1/tile_data = PackedInt32Array(2424898, 65539, 1, 2424899, 65539, 1, 2424900, 65539, 1, 2424901, 65539, 1, 2424902, 65539, 1, 2424903, 65539, 1, 2359362, 3, 0, 2359363, 3, 0, 2359364, 3, 0, 2359365, 3, 0, 2359366, 3, 0, 2359367, 3, 0)
layer_2/z_index = 2
layer_2/tile_data = PackedInt32Array(2359361, 327683, 2, 2359362, 393219, 2, 2359363, 393219, 2, 2359364, 393219, 2, 2359365, 393219, 2, 2359366, 393219, 2, 2359367, 393219, 2, 2359357, 458755, 1, 2424893, 458755, 1, 2490429, 458755, 1, 2555965, 458755, 1, 2621501, 458755, 1, 2687037, 458755, 1, 2752573, 393219, 3, 2752574, 393219, 0, 2752575, 393219, 0, 2752576, 393219, 0, 2752577, 393219, 0, 2752578, 393219, 0, 2752579, 393219, 0, 2752580, 393219, 0, 2752581, 393219, 0, 2752582, 393219, 0, 2752583, 393219, 0)
layer_6/name = "shadows"
layer_6/z_index = 1
layer_6/tile_data = PackedInt32Array(2424903, 393241, 1, 2424902, 393241, 1, 2424901, 393241, 1, 2424900, 393241, 1, 2424899, 393241, 1, 2424898, 393241, 1, 2359362, 393241, 1, 2359363, 393241, 1, 2359364, 393241, 1, 2359365, 393241, 1, 2359366, 393241, 1, 2359367, 393241, 1, 2752573, 458777, 1, 2687037, 458777, 1, 2621501, 458777, 1, 2555965, 458777, 1, 2490429, 458777, 1, 2424893, 458777, 1, 2359357, 458777, 1)
layer_7/name = "rain_splash"
layer_7/tile_data = PackedInt32Array(2555967, 30, 0, 2687041, 30, 0, 2359360, 30, 0, 2621510, 30, 0, 2687044, 30, 0, 2490430, 30, 0, 2687038, 30, 0, 2359358, 30, 0)

[node name="Christina" parent="." instance=ExtResource("2_ouep1")]
position = Vector2(1002, 491)

[node name="Camera2D" type="Camera2D" parent="Christina"]
zoom = Vector2(6, 6)
limit_left = 921
limit_top = 476
limit_right = 1273
limit_bottom = 700
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="rain" parent="." instance=ExtResource("3_jrfk8")]
position = Vector2(1071, 454)

[node name="sunset" parent="." instance=ExtResource("4_ogake")]
visible = false

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(1117, 700)

[node name="four_way_transit_point" type="Area2D" parent="."]
position = Vector2(1283, 672)

[node name="CollisionShape2D" type="CollisionShape2D" parent="four_way_transit_point"]
position = Vector2(0, -58.5)
shape = SubResource("RectangleShape2D_nn48c")

[node name="clancy_cabin_transit_point" type="Area2D" parent="."]
position = Vector2(951, 466)

[node name="CollisionShape2D" type="CollisionShape2D" parent="clancy_cabin_transit_point"]
position = Vector2(52.5, 0)
shape = SubResource("RectangleShape2D_0ox7g")

[connection signal="body_entered" from="four_way_transit_point" to="." method="_on_four_way_transit_point_body_entered"]
[connection signal="body_exited" from="four_way_transit_point" to="." method="_on_four_way_transit_point_body_exited"]
[connection signal="body_entered" from="clancy_cabin_transit_point" to="." method="_on_clancy_cabin_transit_point_body_entered"]
[connection signal="body_exited" from="clancy_cabin_transit_point" to="." method="_on_clancy_cabin_transit_point_body_exited"]
